# learning_rmk

./: .gitignore  README.md
docs/: heuristics_blinky.md  heuristics_micropad.md  rmk_contributor_workflows.md
hardware/: README.md  kicad_macropad-B_Cu.gbr  kicad_macropad-B_Mask.gbr  kicad_macropad-B_Paste.gbr  kicad_macropad-B_Silkscreen.gbr  kicad_macropad-Edge_Cuts.gbr  kicad_macropad-F_Cu.gbr  kicad_macropad-F_Mask.gbr  kicad_macropad-F_Paste.gbr  kicad_macropad-F_Silkscreen.gbr  kicad_macropad-NPTH.drl  kicad_macropad-PTH.drl  kicad_macropad-job.gbrjob  kicad_macropad.kicad_pcb  kicad_macropad.kicad_pro  kicad_macropad.kicad_sch
programs/: README.md
programs/nrf52840_blinky/: Cargo.toml  memory.x
programs/nrf52840_blinky/.cargo/: config.toml
programs/rp2040_blinky/: Cargo.toml
programs/rp2040_micropad/: Cargo.toml
programs/rp2040_rmk_micropad/: Cargo.toml  Makefile.toml  keyboard.toml  vial.json
