[package]
name = "nRF52840_embassy_blinky"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    # "defmt",
] }
embassy-nrf = { version = "0.8.0", features = [
    # "defmt",
    "nrf52840",
    "time-driver-rtc1",
    # "gpiote",
    # "unstable-pac",
    "time",
    # "net-driver",
] }
embassy-time = { version = "0.5.0", features = [
    # "defmt",
    # "defmt-timestamp-uptime",
] }
panic-probe = "1.0.0"
