[package]
name = "rp2040_embassy_blinky"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.8.0", features = ["critical-section-impl", "rp2040", "time-driver"] }
embassy-time = "0.5.0"
panic-probe = "1.0.0"
