[package]
name = "RP2040_micropad"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.8.0", features = ["critical-section-impl", "rp2040", "time-driver"] }
embassy-time = "0.5.0"
embassy-usb = { version = "0.5.1", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
usbd-hid = "0.8.2"
